{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 83,
  "lineage": "752942df-0a76-84e9-1f22-c10be6225c6a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "EIP1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06d0c583d980b6257",
            "domain": "vpc",
            "id": "eipalloc-06d0c583d980b6257",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-52-14-188-25.us-east-2.compute.amazonaws.com",
            "public_ip": "52.14.188.25",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Env": "dev"
            },
            "tags_all": {
              "Env": "dev"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:013335838002:internet-gateway/igw-0fed65f768a25f777",
            "id": "igw-0fed65f768a25f777",
            "owner_id": "013335838002",
            "tags": {
              "Name": "OWN-main"
            },
            "tags_all": {
              "Name": "OWN-main"
            },
            "vpc_id": "vpc-0bf702e3ae57e06c9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06d0c583d980b6257",
            "association_id": "eipassoc-00ec17fe00735c9ca",
            "connectivity_type": "public",
            "id": "nat-0f6492a634bd4bb08",
            "network_interface_id": "eni-0077568b93760d795",
            "private_ip": "10.0.0.237",
            "public_ip": "52.14.188.25",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05f98677e52b21082",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.EIP1",
            "aws_internet_gateway.gw",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fceccda6069576e91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f6492a634bd4bb08",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fceccda6069576e9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.EIP1",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.example",
            "aws_route_table.privateRT",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fed65f768a25f777",
            "id": "r-rtb-031caa75dcdc8cef41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-031caa75dcdc8cef4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.publicRT",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:013335838002:route-table/rtb-0fceccda6069576e9",
            "id": "rtb-0fceccda6069576e9",
            "owner_id": "013335838002",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "PRIVATE-RT-1"
            },
            "tags_all": {
              "Name": "PRIVATE-RT-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf702e3ae57e06c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:013335838002:route-table/rtb-031caa75dcdc8cef4",
            "id": "rtb-031caa75dcdc8cef4",
            "owner_id": "013335838002",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "PUBLIC-RT-1"
            },
            "tags_all": {
              "Name": "PUBLIC-RT-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf702e3ae57e06c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040e322dfccd52073",
            "route_table_id": "rtb-0fceccda6069576e9",
            "subnet_id": "subnet-0c75fb70b56d682b1"
          },
          "dependencies": [
            "aws_route_table.privateRT",
            "aws_subnet.private1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0377e0fc7d3033ae0",
            "route_table_id": "rtb-031caa75dcdc8cef4",
            "subnet_id": "subnet-05f98677e52b21082"
          },
          "dependencies": [
            "aws_route_table.publicRT",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:013335838002:security-group/sg-03739e9f2ab32bff0",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03739e9f2ab32bff0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "eks_nodes-sg",
            "name_prefix": "",
            "owner_id": "013335838002",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bf702e3ae57e06c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:013335838002:subnet/subnet-0c75fb70b56d682b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c75fb70b56d682b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "013335838002",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PRIVATE-SUBNET-1"
            },
            "tags_all": {
              "Name": "PRIVATE-SUBNET-1"
            },
            "vpc_id": "vpc-0bf702e3ae57e06c9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:013335838002:subnet/subnet-05f98677e52b21082",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f98677e52b21082",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "013335838002",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PUBLIC-SUBNET-1"
            },
            "tags_all": {
              "Name": "PUBLIC-SUBNET-1"
            },
            "vpc_id": "vpc-0bf702e3ae57e06c9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:013335838002:vpc/vpc-0bf702e3ae57e06c9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06969ea5431357a1a",
            "default_route_table_id": "rtb-0521a6e61acf53d2f",
            "default_security_group_id": "sg-0328891784433b34f",
            "dhcp_options_id": "dopt-005ef8854d9a61d74",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bf702e3ae57e06c9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0521a6e61acf53d2f",
            "owner_id": "013335838002",
            "tags": {
              "Name": "OWN-VPC"
            },
            "tags_all": {
              "Name": "OWN-VPC"
            }
          }
        }
      ]
    }
  ]
}